Practica con toast falta insert

--- a/app/src/main/res/layout/activity_guardar.xml
+++ b/app/src/main/res/layout/activity_guardar.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_bias="0.025"/>
 
     <EditText
+        android:id="@+id/txtData"
         android:layout_width="match_parent"
         android:layout_height="600dp"
         app:layout_constraintBottom_toBottomOf="parent"
